--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -158,6 +158,7 @@ controlPlane:
         - mitigations=off      # Less security, more speed
         - security=none        # Less security, more speed
         - net.ifnames=1        # Enable predictable NIC naming
+        - talos.auditd.disabled=1             # Less security, faster puter
       systemExtensions:
         officialExtensions:
           - siderolabs/i915
