Update gpu stuff

--- a/kubernetes/main/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/plex/app/helmrelease.yaml
@@ -41,12 +41,11 @@ spec:
               TZ: ${TZ}
             resources:
               requests:
-                gpu.intel.com/i915: 1
                 cpu: 258m
                 memory: 3443Mi
               limits:
                 gpu.intel.com/i915: 1
-                memory: 3443Mi
+                memory: 8Gi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
