--- a/kubernetes/main/apps/kube-system/node-feature-discovery/rules/kustomization.yaml
+++ b/kubernetes/main/apps/kube-system/node-feature-discovery/rules/kustomization.yaml
@@ -4,3 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./cc2652-zigbee-device.yaml
+  - ./intel-gpu-device.yaml
