--- a/kubernetes/main/apps/default/bazarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/bazarr/app/helmrelease.yaml
@@ -103,7 +103,7 @@ spec:
       media:
         type: nfs
         server: nas.${SECRET_HOME_DOMAIN}
-        path: /spool/media
+        path: /tank/media
         globalMounts:
           - path: /media
       scripts:
