--- a/kubernetes/main/apps/default/sonarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/sonarr/app/helmrelease.yaml
@@ -103,6 +103,6 @@ spec:
       media:
         type: nfs
         server: nas.${SECRET_HOME_DOMAIN}
-        path: /spool/media
+        path: /tank/media
         globalMounts:
           - path: /media
