--- a/kubernetes/main/apps/default/radarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/radarr/app/helmrelease.yaml
@@ -105,6 +105,6 @@ spec:
       media:
         type: nfs
         server: nas.${SECRET_HOME_DOMAIN}
-        path: /tank/media
+        path: /spool/media
         globalMounts:
           - path: /media
