--- a/kubernetes/main/apps/default/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/sabnzbd/app/helmrelease.yaml
@@ -97,6 +97,6 @@ spec:
       media:
         type: nfs
         server: nas.${SECRET_HOME_DOMAIN}
-        path: /tank/media
+        path: /spool/media
         globalMounts:
           - path: /media
