--- a/kubernetes/main/flux/settings/cluster-settings.yaml
+++ b/kubernetes/main/flux/settings/cluster-settings.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 data:
   NAS_ADDR: 192.168.20.5
-  MEDIADIR: /tank/media
+  MEDIADIR: /spool/media
   TZ: "Europe/Berlin"
 
   SVC_MQTT_ADDR: 192.168.20.222
