--- a/kubernetes/main/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -40,9 +40,9 @@ spec:
             resources:
               requests:
                 cpu: 5m
-                memory: 100M
+                memory: 100Mi
               limits:
-                memory: 500M
+                memory: 1Gi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
