--- a/kubernetes/main/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/main/bootstrap/apps/helmfile.yaml
@@ -15,9 +15,6 @@ repositories:
   - name: cilium
     url: https://helm.cilium.io
 
-  - name: coredns
-    url: https://coredns.github.io/helm
-
 releases:
   - name: prometheus-operator-crds
     namespace: monitoring
@@ -35,7 +32,7 @@ releases:
 
   - name: coredns
     namespace: kube-system
-    chart: coredns/coredns
+    chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.39.0
     values:
       - ../../apps/kube-system/coredns/app/helm-values.yaml
