--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -182,11 +182,11 @@ spec:
           gnetId: 1860
           revision: 37
           datasource: Prometheus
-        zfs:
+        # zfs:
           # renovate: depName="ZFS"
-          gnetId: 7845
-          revision: 4
-          datasource: Prometheus
+          # gnetId: 7845
+          # revision: 4
+          # datasource: Prometheus
         cert-manager:
           # renovate: depName="Cert-manager-Kubernetes"
           gnetId: 20842
