--- a/kubernetes/main/apps/monitoring/kube-prometheus-stack/app/scrapeconfigs/kustomization.yaml
+++ b/kubernetes/main/apps/monitoring/kube-prometheus-stack/app/scrapeconfigs/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 resources:
-  - ./zfs-exporter.yaml
+  # - ./zfs-exporter.yaml
   - ./node-exporter.yaml
   - ./smartctl-exporter.yaml
   # - ./minio-exporter.yaml
