--- a/kubernetes/main/apps/flux-system/flux-operator/instance/github/webhooks/receiver.yaml
+++ b/kubernetes/main/apps/flux-system/flux-operator/instance/github/webhooks/receiver.yaml
@@ -17,5 +17,5 @@ spec:
       namespace: flux-system
     - apiVersion: kustomize.toolkit.fluxcd.io/v1
       kind: Kustomization
-      name: flux-system
+      name: cluster-apps
       namespace: flux-system
