--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - ./govee2mqtt/ks.yaml
   - ./home-assistant/ks.yaml
   - ./immich/ks.yaml
-  - ./kyoo/ks.yaml
+  # - ./kyoo/ks.yaml
   - ./lldap/ks.yaml
   - ./nextcloud/ks.yaml
   - ./overseerr/ks.yaml
@@ -23,11 +23,11 @@ resources:
   - ./recyclarr/ks.yaml
   - ./redlib/ks.yaml
   - ./sabnzbd/ks.yaml
-  - ./searxng/ks.yaml
+  # - ./searxng/ks.yaml
   - ./smtp-relay/ks.yaml
   - ./sonarr/ks.yaml
   - ./tandoor/ks.yaml
   - ./tautulli/ks.yaml
-  - ./umlautadaptarr/ks.yaml
+  # - ./umlautadaptarr/ks.yaml
   - ./vaultwarden/ks.yaml
   - ./zigbee2mqtt/ks.yaml
