--- a/kubernetes/main/apps/databases/emqx/ks.yaml
+++ b/kubernetes/main/apps/databases/emqx/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/databases/emqx/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -35,7 +35,7 @@ spec:
   dependsOn:
     - name: emqx
   path: ./kubernetes/main/apps/databases/emqx/cluster
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
