--- a/kubernetes/main/apps/default/atuin/ks.yaml
+++ b/kubernetes/main/apps/default/atuin/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/atuin/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
