--- a/kubernetes/main/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/main/apps/default/home-assistant/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - name: external-secrets-stores
     - name: volsync
   path: ./kubernetes/main/apps/default/home-assistant/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
