--- a/kubernetes/main/apps/default/radicale/ks.yaml
+++ b/kubernetes/main/apps/default/radicale/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: external-secrets-stores
     - name: rook-ceph-cluster
   path: ./kubernetes/main/apps/default/radicale/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
