--- a/kubernetes/main/apps/default/redlib/ks.yaml
+++ b/kubernetes/main/apps/default/redlib/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   interval: 10m
   path: "./kubernetes/main/apps/default/redlib/app"
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
