--- a/kubernetes/main/apps/default/tautulli/ks.yaml
+++ b/kubernetes/main/apps/default/tautulli/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: volsync
     - name: rook-ceph-cluster
   path: ./kubernetes/main/apps/default/tautulli/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
