--- a/kubernetes/main/apps/default/zigbee2mqtt/ks.yaml
+++ b/kubernetes/main/apps/default/zigbee2mqtt/ks.yaml
@@ -16,7 +16,7 @@ spec:
     - name: node-feature-rules
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/zigbee2mqtt/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
