--- a/kubernetes/main/apps/kube-system/fstrim/ks.yaml
+++ b/kubernetes/main/apps/kube-system/fstrim/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: ./kubernetes/main/apps/kube-system/fstrim/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
