--- a/kubernetes/main/flux/config/cluster.yaml
+++ b/kubernetes/main/flux/config/cluster.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   interval: 30m
   path: ./kubernetes/main/flux/repositories
-  prune: true
+  prune: false # change back later
   wait: false
   sourceRef:
     kind: GitRepository
@@ -27,7 +27,7 @@ metadata:
 spec:
   interval: 30m
   path: ./kubernetes/main/flux/settings
-  prune: true
+  prune: false # change back later
   wait: false
   sourceRef:
     kind: GitRepository
@@ -46,7 +46,7 @@ metadata:
 spec:
   interval: 10m
   path: ./kubernetes/main/apps
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
