Enable prune again

--- a/kubernetes/apps/databases/emqx/ks.yaml
+++ b/kubernetes/apps/databases/emqx/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/apps/databases/emqx/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -35,7 +35,7 @@ spec:
   dependsOn:
     - name: emqx
   path: ./kubernetes/apps/databases/emqx/cluster
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
