--- a/kubernetes/apps/databases/postgres-backup/ks.yaml
+++ b/kubernetes/apps/databases/postgres-backup/ks.yaml
@@ -9,7 +9,7 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
   path: ./kubernetes/apps/databases/postgres-backup/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
