--- a/kubernetes/apps/default/kyoo/ks.yaml
+++ b/kubernetes/apps/default/kyoo/ks.yaml
@@ -16,7 +16,7 @@ spec:
     - name: external-secrets-stores
     - name: volsync
   path: ./kubernetes/apps/default/kyoo/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
