--- a/kubernetes/apps/default/lldap/ks.yaml
+++ b/kubernetes/apps/default/lldap/ks.yaml
@@ -10,7 +10,7 @@ spec:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/apps/default/lldap/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
