--- a/kubernetes/apps/default/calibre-web/ks.yaml
+++ b/kubernetes/apps/default/calibre-web/ks.yaml
@@ -16,7 +16,7 @@ spec:
     - name: rook-ceph-cluster
     - name: volsync
   path: ./kubernetes/apps/default/calibre-web/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
