--- a/kubernetes/apps/default/gitea/ks.yaml
+++ b/kubernetes/apps/default/gitea/ks.yaml
@@ -16,7 +16,7 @@ spec:
     - name: volsync
     - name: external-secrets-stores
   path: ./kubernetes/apps/default/gitea/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
