--- a/kubernetes/apps/default/radarr/ks.yaml
+++ b/kubernetes/apps/default/radarr/ks.yaml
@@ -18,7 +18,7 @@ spec:
     - name: volsync
     - name: rook-ceph-cluster
   path: ./kubernetes/apps/default/radarr/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
