--- a/kubernetes/apps/default/tandoor/ks.yaml
+++ b/kubernetes/apps/default/tandoor/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - name: rook-ceph-cluster
     - name: external-secrets-stores
   path: ./kubernetes/apps/default/tandoor/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
