--- a/kubernetes/apps/default/tautulli/ks.yaml
+++ b/kubernetes/apps/default/tautulli/ks.yaml
@@ -16,7 +16,7 @@ spec:
     - name: volsync
     - name: rook-ceph-cluster
   path: ./kubernetes/apps/default/tautulli/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
