--- a/kubernetes/apps/default/zigbee2mqtt/ks.yaml
+++ b/kubernetes/apps/default/zigbee2mqtt/ks.yaml
@@ -18,7 +18,7 @@ spec:
     - name: node-feature-rules
     - name: external-secrets-stores
   path: ./kubernetes/apps/default/zigbee2mqtt/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
