--- a/kubernetes/apps/kube-system/intel-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/intel-device-plugin/ks.yaml
@@ -10,7 +10,7 @@ spec:
     - name: node-feature-discovery
     - name: cert-manager-issuers
   path: ./kubernetes/apps/kube-system/intel-device-plugin/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -28,7 +28,7 @@ spec:
   dependsOn:
     - name: intel-device-plugin-operator
   path: ./kubernetes/apps/kube-system/intel-device-plugin/gpu
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
