--- a/kubernetes/apps/monitoring/kube-state-metrics/ks.yaml
+++ b/kubernetes/apps/monitoring/kube-state-metrics/ks.yaml
@@ -13,7 +13,7 @@ spec:
   interval: 30m
   timeout: 5m
   path: ./kubernetes/apps/monitoring/kube-state-metrics/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
