--- a/kubernetes/apps/monitoring/unpoller/ks.yaml
+++ b/kubernetes/apps/monitoring/unpoller/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/apps/monitoring/unpoller/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
