--- a/kubernetes/apps/networking/external-services/ks.yaml
+++ b/kubernetes/apps/networking/external-services/ks.yaml
@@ -9,7 +9,7 @@ spec:
   dependsOn:
     - name: nginx-external
   path: ./kubernetes/apps/networking/external-services/minio
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
