--- a/kubernetes/apps/default/nextcloud/ks.yaml
+++ b/kubernetes/apps/default/nextcloud/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/apps/default/nextcloud/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
