--- a/kubernetes/apps/default/plex/ks.yaml
+++ b/kubernetes/apps/default/plex/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: volsync
     - name: rook-ceph-cluster
   path: ./kubernetes/apps/default/plex/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -42,7 +42,7 @@ spec:
   dependsOn:
     - name: plex
   path: ./kubernetes/apps/default/plex/auto-languages
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -71,7 +71,7 @@ spec:
     - name: external-secrets-stores
     - name: volsync
   path: ./kubernetes/apps/default/plex/kometa
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -99,7 +99,7 @@ spec:
   interval: 30m
   timeout: 5m
   path: ./kubernetes/apps/default/plex/trakt-sync
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
