--- a/kubernetes/apps/default/smtp-relay/ks.yaml
+++ b/kubernetes/apps/default/smtp-relay/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   targetNamespace: default
   path: ./kubernetes/apps/default/smtp-relay/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
