--- a/kubernetes/apps/default/sonarr/ks.yaml
+++ b/kubernetes/apps/default/sonarr/ks.yaml
@@ -18,7 +18,7 @@ spec:
     - name: volsync
     - name: rook-ceph-cluster
   path: ./kubernetes/apps/default/sonarr/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
