--- a/kubernetes/apps/monitoring/smartctl-exporter/ks.yaml
+++ b/kubernetes/apps/monitoring/smartctl-exporter/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: ./kubernetes/apps/monitoring/smartctl-exporter/app
-  prune: true
+  prune: false # change back later
   sourceRef:
     kind: GitRepository
     name: flux-system
