--- a/kubernetes/apps/networking/cloudflare-ddns/ks.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/ks.yaml
@@ -8,6 +8,7 @@ spec:
   targetNamespace: *namespace
   dependsOn:
     - name: external-secrets-stores
+      namespace: kube-system
   path: ./kubernetes/apps/networking/cloudflare-ddns/app
   prune: false # change back later
   sourceRef:
