--- a/kubernetes/apps/kube-system/external-secrets/ks.yaml
+++ b/kubernetes/apps/kube-system/external-secrets/ks.yaml
@@ -31,6 +31,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets
+      namespace: kube-system
   path: ./kubernetes/apps/kube-system/external-secrets/stores
   prune: false # change back later
   sourceRef:
