--- a/kubernetes/apps/monitoring/unpoller/ks.yaml
+++ b/kubernetes/apps/monitoring/unpoller/ks.yaml
@@ -12,6 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
+      namespace: kube-system
   path: ./kubernetes/apps/monitoring/unpoller/app
   prune: false # change back later
   sourceRef:
