--- a/kubernetes/apps/networking/external-dns/ks.yaml
+++ b/kubernetes/apps/networking/external-dns/ks.yaml
@@ -12,6 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: external-secrets-stores
+      namespace: kube-system
   path: ./kubernetes/apps/networking/external-dns/cloudflare
   prune: false
   sourceRef:
@@ -34,6 +35,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: external-secrets-stores
+      namespace: kube-system
   path: ./kubernetes/apps/networking/external-dns/unifi
   prune: false
   sourceRef:
