--- a/kubernetes/apps/networking/multus/ks.yaml
+++ b/kubernetes/apps/networking/multus/ks.yaml
@@ -12,6 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: cilium
+      namespace: kube-system
   interval: 30m
   timeout: 5m
   path: "./kubernetes/apps/networking/multus/app"
@@ -34,6 +35,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: multus
+      namespace: networking
   interval: 30m
   timeout: 5m
   path: "./kubernetes/apps/networking/multus/networks"
