--- a/kubernetes/apps/networking/nginx/ks.yaml
+++ b/kubernetes/apps/networking/nginx/ks.yaml
@@ -9,6 +9,7 @@ spec:
   targetNamespace: *namespace
   dependsOn:
     - name: cert-manager-issuers
+      namespace: cert-manager
   path: ./kubernetes/apps/networking/nginx/certificates
   sourceRef:
     kind: GitRepository
@@ -27,6 +28,7 @@ spec:
   targetNamespace: *namespace
   dependsOn:
     - name: nginx-certificates
+      namespace: networking
   path: ./kubernetes/apps/networking/nginx/internal
   prune: false # change back later
   sourceRef:
@@ -46,6 +48,7 @@ spec:
   targetNamespace: *namespace
   dependsOn:
     - name: nginx-certificates
+      namespace: networking
   path: ./kubernetes/apps/networking/nginx/external
   prune: false # change back later
   sourceRef:
