--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/ks.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/ks.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app system-upgrade-controller
-  namespace: &namespace flux-system
+  namespace: &namespace system-upgrade
 spec:
   targetNamespace: *namespace
   commonMetadata:
@@ -23,7 +23,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app system-upgrade-controller-plans
-  namespace: &namespace flux-system
+  namespace: &namespace system-upgrade
 spec:
   targetNamespace: *namespace
   commonMetadata:
@@ -31,7 +31,9 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: system-upgrade-controller
+      namespace: system-upgrade
     - name: node-feature-rules
+      namespace: kube-system
   path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/plans
   prune: false # change back later
   sourceRef:
