--- a/kubernetes/apps/actions-runner-system/gha-runner-scale-set-controller/ks.yaml
+++ b/kubernetes/apps/actions-runner-system/gha-runner-scale-set-controller/ks.yaml
@@ -12,6 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
+      namespace: kube-system
   path: ./kubernetes/apps/actions-runner-system/gha-runner-scale-set-controller/app
   prune: false # change back later
   sourceRef:
