--- a/kubernetes/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/ks.yaml
@@ -36,7 +36,9 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager
+      namespace: cert-manager
     - name: external-secrets-stores
+      namespace: kube-system
   path: ./kubernetes/apps/cert-manager/cert-manager/issuers
   prune: false # change back later
   sourceRef:
