--- a/kubernetes/apps/default/authelia/ks.yaml
+++ b/kubernetes/apps/default/authelia/ks.yaml
@@ -8,8 +8,11 @@ spec:
   targetNamespace: *namespace
   dependsOn:
     - name: cloudnative-pg-cluster
+      namespace: databases
     - name: dragonfly-cluster
+      namespace: databases
     - name: lldap
+      namespace: default
   path: ./kubernetes/apps/default/authelia/app
   prune: false # change back later
   sourceRef:
