--- a/kubernetes/apps/default/lldap/ks.yaml
+++ b/kubernetes/apps/default/lldap/ks.yaml
@@ -12,7 +12,7 @@ spec:
     - name: external-secrets-stores
       namespace: kube-system
   path: ./kubernetes/apps/default/lldap/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
