--- a/kubernetes/apps/default/overseerr/ks.yaml
+++ b/kubernetes/apps/default/overseerr/ks.yaml
@@ -13,9 +13,11 @@ spec:
     - ../../../../flux/components/volsync
   dependsOn:
     - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
+      namespace: volsync-system
   path: ./kubernetes/apps/default/overseerr/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
