--- a/kubernetes/apps/default/recyclarr/ks.yaml
+++ b/kubernetes/apps/default/recyclarr/ks.yaml
@@ -13,10 +13,13 @@ spec:
     - ../../../../flux/components/volsync
   dependsOn:
     - name: volsync
+      namespace: volsync-system
     - name: external-secrets-stores
+      namespace: kube-system
     - name: rook-ceph-cluster
+      namespace: rook-ceph
   path: ./kubernetes/apps/default/recyclarr/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
