--- a/kubernetes/apps/databases/emqx/ks.yaml
+++ b/kubernetes/apps/databases/emqx/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: external-secrets-stores
       namespace: kube-system
   path: ./kubernetes/apps/databases/emqx/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -38,7 +38,7 @@ spec:
     - name: emqx
       namespace: databases
   path: ./kubernetes/apps/databases/emqx/cluster
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
