--- a/kubernetes/apps/databases/influxdb/ks.yaml
+++ b/kubernetes/apps/databases/influxdb/ks.yaml
@@ -19,7 +19,7 @@ spec:
     - name: external-secrets-stores
       namespace: kube-system
   path: ./kubernetes/apps/databases/influxdb/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
