--- a/kubernetes/apps/databases/postgres-backup/ks.yaml
+++ b/kubernetes/apps/databases/postgres-backup/ks.yaml
@@ -10,7 +10,7 @@ spec:
     - name: cloudnative-pg-cluster
       namespace: databases
   path: ./kubernetes/apps/databases/postgres-backup/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
