--- a/kubernetes/apps/default/atuin/ks.yaml
+++ b/kubernetes/apps/default/atuin/ks.yaml
@@ -16,7 +16,7 @@ spec:
     - name: external-secrets-stores
       namespace: kube-system
   path: ./kubernetes/apps/default/atuin/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
