--- a/kubernetes/apps/default/audiobookshelf/ks.yaml
+++ b/kubernetes/apps/default/audiobookshelf/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - name: volsync
       namespace: volsync-system
   path: ./kubernetes/apps/default/audiobookshelf/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
