--- a/kubernetes/apps/default/bazarr/ks.yaml
+++ b/kubernetes/apps/default/bazarr/ks.yaml
@@ -21,7 +21,7 @@ spec:
     - name: volsync
       namespace: volsync-system
   path: ./kubernetes/apps/default/bazarr/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
