--- a/kubernetes/apps/default/calibre-web/ks.yaml
+++ b/kubernetes/apps/default/calibre-web/ks.yaml
@@ -18,7 +18,7 @@ spec:
     - name: volsync
       namespace: volsync-system
   path: ./kubernetes/apps/default/calibre-web/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
