--- a/kubernetes/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/apps/default/home-assistant/ks.yaml
@@ -24,7 +24,7 @@ spec:
     - name: volsync
       namespace: volsync-system
   path: ./kubernetes/apps/default/home-assistant/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
