--- a/kubernetes/apps/default/plex/ks.yaml
+++ b/kubernetes/apps/default/plex/ks.yaml
@@ -13,9 +13,11 @@ spec:
     - ../../../../flux/components/volsync
   dependsOn:
     - name: volsync
+      namespace: volsync-system
     - name: rook-ceph-cluster
+      namespace: rook-ceph
   path: ./kubernetes/apps/default/plex/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -42,8 +44,9 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: plex
+      namespace: default
   path: ./kubernetes/apps/default/plex/auto-languages
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -71,9 +74,11 @@ spec:
     - name: radarr
     - name: sonarr
     - name: external-secrets-stores
+      namespace: kube-system
     - name: volsync
+      namespace: volsync-system
   path: ./kubernetes/apps/default/plex/kometa
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -102,7 +107,7 @@ spec:
   interval: 30m
   timeout: 5m
   path: ./kubernetes/apps/default/plex/trakt-sync
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -110,8 +115,11 @@ spec:
   wait: false
   dependsOn:
     - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
+      namespace: volsync-system
     - name: external-secrets-stores
+      namespace: kube-system
     - name: plex
   postBuild:
     substitute:
