--- a/kubernetes/apps/kube-system/node-feature-discovery/ks.yaml
+++ b/kubernetes/apps/kube-system/node-feature-discovery/ks.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   targetNamespace: *namespace
   path: ./kubernetes/apps/kube-system/node-feature-discovery/app
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -26,7 +26,7 @@ spec:
     - name: node-feature-discovery
       namespace: kube-system
   path: ./kubernetes/apps/kube-system/node-feature-discovery/rules
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
