--- a/kubernetes/apps/networking/nginx/ks.yaml
+++ b/kubernetes/apps/networking/nginx/ks.yaml
@@ -16,7 +16,7 @@ spec:
     name: flux-system
     namespace: flux-system
   interval: 30m
-  prune: false # change back later
+  prune: true
   wait: true
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
@@ -31,7 +31,7 @@ spec:
     - name: nginx-certificates
       namespace: networking
   path: ./kubernetes/apps/networking/nginx/internal
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -52,7 +52,7 @@ spec:
     - name: nginx-certificates
       namespace: networking
   path: ./kubernetes/apps/networking/nginx/external
-  prune: false # change back later
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
